# FastRing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md
.github/workflows/: release.yml
docs/: api_reference.md  architecture.md  test_report.md
include/: adc_simulator.h  adc_types.h  config.h  logger.h  ring_buffer.h  tcp_client.h  thread_manager.h  timestamp.h
src/: main.c
src/adc/: adc_simulator.c
src/buffer/: ring_buffer.c
src/network/: tcp_client.c
src/thread/: thread_manager.c  thread_workers.c
src/utils/: adc_error.c  config.c  logger.c  timestamp.c
tests/: CMakeLists.txt  test_adc_simulator.c  test_performance.c  test_ring_buffer.c  test_server.c  test_timestamp.c
visualization/: index.html
